site/assets/css/flexi_frontend.css
/* ... */
#flexicontent .fc_search_field_label {
	display: inline-block;
	vertical-align: top;
	font-size: 90%;
}
#flexicontent .fc_search_field_value {
	display: inline-block;
}


/*************************
 * FLEXIcontent Favourites
 *************************/

.fav-block {
	display: inline-block;
}
.fcfav-reponse-tip {
	display: inline-block;
}
.fav-block img {
	vertical-align: middle;
}
.favlink {
	outline: none;
}
.fcfav img {
}



/***********
 * JComments
 ***********/

div.comments {
	margin-top: 15px;
}

.comments #jc h4 {
	color: inherit;
	font-weight: normal;
	margin-top: 0px;
}

.comments #comments a {
	color: inherit;
}

.comments #comments a:hover {
	color: #578e13;
}

.comments #comments div.comments-list {
	margin-left: 0;
}

.comments .rbox_tr,
.comments .rbox_tl,
.comments .rbox_t,
.comments .rbox_br,
.comments .rbox_bl,
.comments .rbox_b,
.comments .rbox_m {
	background: none;
	border: none;
}

.comments .rbox {
	border: 1px #cccccc solid;
}

.comments .even .rbox {
	background: #ffffff;
}

.comments .odd .rbox {
	background: #f0f0f0;
}

.comments #comments-list-footer {
	margin: 0 0 10px 0;
}

#comments-form p, 
#comments-form #comments-form-buttons, 
#comments-form #comments-form-error {
	margin-left: 0px;
}

#comments-form #comments-form-message, 
#comments-inline-edit #comments-form-message {
	display: block;
	padding: 5px 5px 5px 25px;
}

.comments-form-message-error {
	background: url(../images/error.png) #ffd86f no-repeat 4px 50%;
}

.comments-form-message-info {
	background: url(../images/information.png) #dfeeff no-repeat 4px 50%;
}

.comments .votes {
	margin-left: -4px;
}

.comments .favs {
	margin: 5px 0 15px;
}



/*****************
 * Joomla Tabs CSS
 *****************/
dl.tabs, .flexicontent dl.tabs {
	float: left;
	margin: 10px 0 -1px 0;
	z-index: 50;
}

dl.tabs dt, .flexicontent dl.tabs dt {
	background: #f0f0f0;
	border-left: 1px solid #cccccc;
	border-right: 1px solid #cccccc;
	border-top: 1px solid #cccccc;
	color: #666666;
	float: left;
	margin-left: 3px;
	padding: 10px;
	display: block;
}

dl.tabs dt.open, .flexicontent dl.tabs dt.open {
	background: #f9f9f9;
	border-bottom: 1px solid #f9f9f9;
	color: #000000;
	z-index: 100;
	padding: 10px;
}

dl.tabs dt:hover, .flexicontent dl.tabs dt:hover {
	background: #c9c9c9;
}

dl.tabs dt a:link, .flexicontent dl.tabs dt a:link {
	color: black;
	outline: medium none;
	text-decoration: none;
	background: none;
}


div.current {
	border: 1px solid #cccccc;
	clear: both;
	padding: 10px 10px;
}

div.current dd {
	margin: 0;
	padding: 0;
}

#bottom-block {
	margin: 0 auto;
	width: 373px;
}



/**************************************
 * File / image Field and other Plugins
 **************************************/

/*[class^="fcfile_"], [class*=" fcfile_"] {}*/

/* File field viewing: property icons */
.fcfile_mime .fcicon-mime,
.fcfile_hits .fcicon-hits,
.fcfile_lang .fcicon-lang {
	vertical-align: middle;
	margin-bottom: 2px;
}
.fcfile_actions {
	margin: 4px;
	float:left;
	clear: both;
	display:inline-block;
}

/* File field viewing: file title */
.fcfile_title {
	font-size: 13px;
	font-weight: normal;
	margin: 4px 6px 0px 6px;
	padding: 4px 0px 0px 0px;
	display: inline-block;
	border-bottom: 1px dashed gray;
}

/* Image field viewing: thumbnails */
img.fc_field_image {
	display: inline-block;
	margin: 0px 4px 6px 0px;
	padding: 1px;
	border: 1px solid lightgray;
	border-radius:5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
div .fc_image_thumb {
	display: inline-block;
	text-decoration: none;
}

/* Image field viewing: thumbnail container */
div .fc_img_container {
	display:inline-block;
	margin: 2px 8px 2px 0px;
}


/* Image field viewing: inline tooltip */
div .fc_img_tooltip_data {
	display:inline-block;
	vertical-align:top;
	margin: 2px 12px 6px 4px;
}
div .fc_img_tooltip_title {
	line-height:1em;
	font-weight:bold;
}
div .fc_img_tooltip_desc {
	line-height:1em;
}

/* Core fields: categories, tags */
div span.fc_categories, div span.fc_tags {
	border-bottom: 1px dashed gray;
}
div a.fc_categories, div a.fc_tags {
}
div .fc_categories.fc_ismain_cat {
	font-weight: bold;
}
div .fc_categories:not(.fc_ismain_cat) {
	font-weight: normal;
}



/* Radio/checkbox/select/etc (indexed fields) viewing: the non-selected values */
div .fc_field_unsused_val {
 text-decoration: line-through;
}
div .fc_field_unsused_val img {
 opacity:0.4;
 filter:alpha(opacity=40); /* For IE8 and earlier */
}


/* fieldgroup field viewing: default container for values */
div.fc-fieldgrp-value-box {
	border-radius: 4px;
	border: 1px solid lightgray;
	display: block;
	float: left;
	
	box-sizing: border-box;
	/*max-width: 98%;
	min-width: 48%;*/
	width: 100%;
	margin: 4px 1%;
	padding: 6px 4px;
	vertical-align: top;
}

/* favourites field viewing: information containers */
[class*="fcfavs-"].fc-mssg-inline {
	position: relative;
	margin: 1px 2px;
}


/************************************
 * FLEXIcontent Advanced Search View
 ************************************/

/* Search view content header, float it left to allow placing print, etc buttons at the right */
.flexicontent.search  h2.contentheading {
	float: left;
	display: block;
}

/* search form */
.flexicontent.search form#searchForm {
	clear: both;
	float: none;
}

/* Search (field) filters TABLE */
.flexicontent.fcsearch table.fc_search_tbl {
	border-collapse: separate;
	border-spacing: 1px;
	width: 100%;
}

/* Container of TEXT search label */
.flexicontent.fcsearch table.fc_search_tbl .fc_search_label_cell {
	text-align:right;
	vertical-align:middle;
	padding: 4px 6px 4px 4px;
	font-weight:bold;
	background-color:#eeeeee;
	font-size: 11px;
	white-space: nowrap;
	width: 5%;
}

/* Container of TEXT search form field */
.flexicontent.fcsearch table.fc_search_tbl .fc_search_option_cell {
	padding: 2px 4px 2px 6px;
	font-size: 11px;
}

/* Search Filter ROW */
.flexicontent.fcsearch table.fc_search_tbl .fc_search_row_0 td {
	background-color: #f0f0f0;
}
/* ... */

